plugins {
    id 'java-gradle-plugin'
}

version = "0.1"

compileJava {
    options.release = 8
    options.compilerArgs << '-parameters'
}

gradlePlugin {
    plugins {
        create("LombokPlugin") {
            id = "net.woggioni.gradle.lombok"
            implementationClass = "net.woggioni.gradle.lombok.LombokPlugin"
        }
    }
}
